--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "react-chatlog",
   "private": true,
+  "homepage": "https://renaspb.github.io/react-chatlog",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "vitest --run"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+  "test": "vitest --run",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+},
   "dependencies": {
     "luxon": "^2.5.2",
     "react": "^18.3.1",
@@ -30,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "eslint-plugin-vitest-globals": "^1.5.0",
+    "gh-pages": "^6.3.0",
     "globals": "^15.11.0",
     "jest-extended": "^4.0.2",
     "jsdom": "^25.0.1",
